fix image border distortion due to padding; adjust h1 size

--- a/styles/_page.scss
+++ b/styles/_page.scss
@@ -43,10 +43,11 @@ body {
       margin-inline: auto;
       max-width: 5rem;
       border-radius: 50%;
-      padding-bottom: var(--padding-300);
+      margin-bottom: var(--padding-300);
     }
     &__name {
-      font-weight: 700;
+      font-size: calc(var(--fs-400) * 1.75);
+      font-weight: 600;
     }
     &__location {
       font-weight: 700;
